Interim commit for 1.15.1 support